--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-watch": "^5.0.0",
     "gulp-wrap": "^0.13.0",
     "mocha": "^5.0.1",
+    "natives": "^1.1.6",
     "rollup": "^0.56.1",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^2.0.0",
